# minidumper-child

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: test.rs
src/: client.rs  lib.rs  server.rs
tests/: e2e.rs
