[package]
description = "Captures minidumps in a child process"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "minidumper-child"
readme = "README.md"
repository = "https://github.com/timfish/minidumper-child"
version = "0.2.2"

[dependencies]
crash-handler = "0.7.0"
minidumper = "0.9.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
sadness-generator = "0.7.0"
