[package]
description = "Captures minidumps in a child process"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "minidumper-child"
readme = "README.md"
repository = "https://github.com/timfish/minidumper-child"
version = "0.3.0"

[dependencies]
crash-handler = "0.7"
minidumper = "0.10"
thiserror = "2"
uuid = {version = "1", features = ["v4"]}

[dev-dependencies]
sadness-generator = "0.7"
